# Rune

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  RUNE_1_0_PLAN.md  SPEC.md  TECH_STACK_AND_PLAN.md  all_stdlib_demo.rn  avr_keyword_method_live_test.rn  avr_oop_string_test.rn  backend_case_call.rn  backend_case_if.rn  backend_case_locals.rn  backend_case_print.rn  backend_probe_keyword_call.rn  backend_probe_leaf_call.rn  backend_probe_loop.rn  backend_probe_nested_if.rn  buzzer_arduino.rn  buzzer_serial_control_arduino.rn  calc_probe.rn  calculator.c  calculator.py  calculator_rs.rs  diag_codegen_bad.rn  diag_main_bad.rn  diag_math_bad.rn  diag_parse_bad.rn  dynamic_cmp_demo.rn  dynamic_logic_demo.rn  dynamic_math_demo.rn  ghidra_dump_functions.java  ir_sensor_led_arduino.rn  modulo_demo.rn  rune_arduino_runtime.hpp  sample_build_test.rn  sample_print_test.rn  serial_calculator_arduino.rn  (+28 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
Docs/: GRAMMAR.md  LLVM_AVR_TOOLCHAIN.md  NO_ZIG_TOOLCHAIN_PLAN.md  README.md  RUNTIME_ABI.md  STDLIBS.md  SYNTAX.md  TARGET_SUPPORT_MATRIX.md  VERSIONING.md  WASM_PLAN.md
examples/arduino/: avr_oop_showcase_arduino.rn  blink.rn  button_counter.rn  counter.rn  hello_arduino.rn  led_brightness.rn  mega_multi_serial.rn  nano_imu_reader.rn  servo_angle_control_arduino.rn  temperature_sensor.rn  ultrasonic_distance_arduino.rn
examples/host/: calculator.rn  cli.rn  conversion_demo.rn  dynamic_add_demo.rn  dynamic_demo.rn  dynamic_fn_demo.rn  env_network_demo.rn  fibonacci.rn  greet_call.rn  hello.rn  input_demo.rn  module_main.rn  panic_demo.rn  serial_connector_arduino.rn  serial_reader.rn  servo_connector_arduino.rn  stderr_demo.rn  stdlib_demo.rn  struct_demo.rn  structs.rn
examples/wasm/: add.rn
ffi_demo/: greet_from_c.c  lib.rn  math.rn  runeffi.h  runeffi_msvc.h  use_rune.c
installers/: README.md  install-unix.sh  install-windows.ps1
src/: avr_cbe_opt.rs  build.rs  builtin_modules.rs  codegen.rs  diagnostics.rs  ir.rs  lexer.rs  lib.rs  llvm_backend.rs  llvm_ir.rs  main.rs  module_loader.rs  optimize.rs  parser.rs  semantic.rs  toolchain.rs  version.rs  warnings.rs
stdlib/: arduino.rn  audio.rn  env.rn  fs.rn  gpio.rn  io.rn  json.rn  network.rn  serial.rn  sys.rn  system.rn  terminal.rn  time.rn
tests/: build_tests.rs  cli_avr_precode_tests.rs  cli_c_header_tests.rs  cli_debug_tests.rs  cli_decompile_tests.rs  cli_diagnostics_tests.rs  cli_omission_tests.rs  cli_toolchain_tests.rs  cli_version_tests.rs  cli_wasm_tests.rs  codegen_tests.rs  ir_tests.rs  lexer_tests.rs  llvm_backend_tests.rs  llvm_ir_tests.rs  llvm_runtime_tests.rs  module_loader_tests.rs  optimize_tests.rs  parser_tests.rs  runtime_dynamic_tests.rs  semantic_tests.rs  stdlib_runtime_tests.rs  toolchain_tests.rs  warnings_tests.rs  wasm_runtime_tests.rs
tools/: README.md  verify_arduino_uno_serial.py
tools/llvm-cbe-src/: .gitignore  CMakeLists.txt
tools/llvm-cbe/tools/llvm-cbe/: CMakeLists.txt  llvm-cbe.cpp
(+12 files in other folders)
