if (NOT DEFINED LLVM_VERSION_MAJOR)
  cmake_minimum_required(VERSION 3.20.0)
  if(POLICY CMP0091)
    cmake_policy(SET CMP0091 NEW)
  endif()
  project(llvm-cbe)
  set (USE_SYSTEM_LLVM 1)
  find_package(LLVM REQUIRED CONFIG)
  message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
  message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
  message(STATUS "LLVM_INCLUDE_DIRS: ${LLVM_INCLUDE_DIRS}")
  include_directories(${LLVM_INCLUDE_DIRS})
  add_definitions(${LLVM_DEFINITIONS})

  list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
  include(AddLLVM)

  if(MSVC AND TARGET LLVMDebugInfoPDB)
    get_target_property(_cbe_pdb_links LLVMDebugInfoPDB INTERFACE_LINK_LIBRARIES)
    if(_cbe_pdb_links)
      set(_cbe_old_dia "C:/Program Files (x86)/Microsoft Visual Studio/2019/Professional/DIA SDK/lib/amd64/diaguids.lib")
      set(_cbe_new_dia "C:/Program Files/Microsoft Visual Studio/2022/Community/DIA SDK/lib/amd64/diaguids.lib")
      string(REPLACE "${_cbe_old_dia}" "${_cbe_new_dia}" _cbe_pdb_links "${_cbe_pdb_links}")
      set_target_properties(LLVMDebugInfoPDB PROPERTIES INTERFACE_LINK_LIBRARIES "${_cbe_pdb_links}")
    endif()
  endif()

  set (CMAKE_CXX_STANDARD 17)
  if(MSVC)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
  endif()
endif()

add_subdirectory(lib)
add_subdirectory(tools)

if( LLVM_INCLUDE_TESTS )
  add_subdirectory(unittests)
endif()
